# fastcall

./: Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
python/fastcall/: __init__.py  core.py  fastcall.pyi
python/tests/: test_all.py
src/: lib.rs  message.rs  server.rs  utils.rs
