[package]
name = "fastcall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastcall"
crate-type = ["cdylib"]

[dependencies]
bincode = "=2.0.0-rc.3"
pyo3 = "0.22.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
